<resources>
    <string name="app_name">MyDiary</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="registration_form">Registration Form</string>
    <string name="register_now">Register Now!</string>
    <string name="don_t_have_an_naccount_yet">Don\'t have an\naccount yet?</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="welcome_to_n_mydiary">Welcome To, \n MyDiary</string>
    <string name="google">Google</string>
    <string name="profile">profile</string>
    <string name="add">add</string>
    <string name="exit">exit</string>
    <string name="title">Title</string>
    <string name="you_re_journey">You\'re Journey!</string>
    <string name="don_t_have_an_account_yet_register_now">Don\'t have an account yet ? Register now</string>
    <string name="default_web_client_id">517104729540-lb95k0konjio10eeq68a4u91eoohfrvp.apps.googleusercontent.com</string>
    <string name="already_have_an_account_login_now">Already have an account ? Login Now</string>
    <string name="sign_in">Sign In</string>
    <string name="write_a_caption_and_hastag">Write a caption and hastag...</string>
</resources>