<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange_bg"
    tools:context=".MainActivity">


    <!--    location text -->

    <!--    caption text -->

    <ImageView
        android:id="@+id/imgDetailSun"
        android:layout_width="222dp"
        android:layout_height="228dp"
        android:layout_marginEnd="-75dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sun" />

    <View
        android:id="@+id/imgDetailContainer"
        android:layout_width="344dp"
        android:layout_height="675dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMainBigTitle"
        app:layout_constraintVertical_bias="0.500" />

    <ImageView
        android:id="@+id/imgDetailCloudTop"
        android:layout_width="152dp"
        android:layout_height="480dp"
        android:layout_marginStart="-25dp"
        android:layout_marginTop="-200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/clound_orange1" />

    <ImageView
        android:id="@+id/imgDetailCloudBottom"
        android:layout_width="168dp"
        android:layout_height="547dp"
        android:layout_marginEnd="-40dp"
        android:layout_marginBottom="-220dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/clound_orange2" />

    <!--    add button -->

    <!--    exit button -->

    <TextView
        android:id="@+id/txtMainBigTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/more_sugar"
        android:text="@string/you_re_journey"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/txtDetailDate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="null"
        android:background="@drawable/rounded_side"
        android:drawablePadding="0sp"
        android:ems="10"
        android:fontFamily="@font/questrial"
        android:gravity="center"
        android:text="2025 - 12- 23 18:09:00"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgDetailContainer"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/imgDetailContainer"
        app:layout_constraintTop_toBottomOf="@+id/imgDetailNote"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription,UseCompatTextViewDrawableXml,VisualLintBounds" />

    <TextView
        android:id="@+id/txtDetailLoc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="null"
        android:background="@drawable/rounded_side"
        android:drawableStart="@drawable/baseline_location_on_24"
        android:drawablePadding="0dp"
        android:ems="10"
        android:fontFamily="@font/questrial"
        android:gravity="center"
        android:text="Unknown Location"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgDetailContainer"
        app:layout_constraintStart_toStartOf="@+id/imgDetailContainer"
        app:layout_constraintTop_toBottomOf="@+id/imgDetailNote"
        app:layout_constraintVertical_bias="0.097"
        tools:ignore="ContentDescription,UseCompatTextViewDrawableXml,VisualLintBounds" />

    <TextView
        android:id="@+id/txtDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgDetailContainer"
        app:layout_constraintEnd_toEndOf="@+id/imgDetailContainer"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/imgDetailContainer"
        app:layout_constraintTop_toTopOf="@+id/imgDetailContainer"
        app:layout_constraintVertical_bias="0.026" />

    <ImageView
        android:id="@+id/imgDetailNote"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="76dp"
        android:background="@android:drawable/ic_menu_gallery"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgDetailContainer"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/imgDetailContainer"
        app:layout_constraintTop_toBottomOf="@+id/txtDetailTitle"
        app:layout_constraintVertical_bias="0.03"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />


    <TextView
        android:id="@+id/multiTxtDetailMessage"
        android:layout_width="300dp"
        android:layout_height="210dp"
        android:autofillHints="null"
        android:background="@drawable/transparant_rounded_corner"
        android:ems="10"
        android:fontFamily="@font/questrial"
        android:gravity="top|center_horizontal"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgDetailContainer"
        app:layout_constraintEnd_toEndOf="@+id/imgDetailContainer"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/imgDetailContainer"
        app:layout_constraintTop_toBottomOf="@+id/txtDetailLoc"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck,TextViewEdits" />

    <ImageButton
        android:id="@+id/btnDetailEdit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/transparent"
        android:contentDescription="@string/add"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/imgDetailContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/btnDetailExit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/transparent"
        android:contentDescription="@string/exit"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/imgDetailContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toEndOf="@+id/btnDetailEdit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978"
        app:srcCompat="@drawable/exit_icon"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/btnDetailDelete"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/transparent"
        android:contentDescription="@string/profile"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/imgDetailContainer"
        app:layout_constraintEnd_toStartOf="@+id/btnDetailEdit"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.979"
        app:srcCompat="@android:drawable/ic_menu_delete"
        app:tint="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>